--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # Version de Python a usar (3.9)
 runtime: python39
 
-# Comando para iniciar el server de FastAPI
+# Comando para iniciar el server de FastAPI -> Similar al npx serve -s build (creo)
 entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
 
 # Tipo de instancia de App Engine
